# claude-deck

./: .gitignore  README.md  debug.bat  package-lock.json  package.json  release.bat
.github/workflows/: release.yml
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
