[package]
name = "claude-deck"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
dirs = "5"
# WebView2 초기 IME 바인딩 버그 우회용 (tauri가 쓰는 버전과 일치해야 함)
webview2-com = "0.38"

[profile.dev]
opt-level = 1
