[package]
name = "claude-deck"
version = "0.3.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
base64 = "0.22"
dirs = "5"
# WebView2 초기 IME 바인딩 버그 우회용 (tauri가 쓰는 버전과 일치해야 함)
webview2-com = "0.38"
# 패닉 발생 시 네이티브 오류 팝업 표시용. tauri-plugin-dialog가 이미 물고 오는
# 버전을 그대로 재사용 — msgbox는 gtk-sys 버전이 충돌해서 못 씀. Windows 네이티브
# 백엔드만 쓰므로 기본 피처(xdg-portal 등)는 불필요.
rfd = { version = "0.15", default-features = false }

[profile.dev]
opt-level = 1
